# trmnl.blog

./: README.md
TerminalBlog (1)/: app.py  main.py  models.py  replit_zip_error_log.txt  routes.py
TerminalBlog (1)/templates/: terminal.html
TerminalBlog (1)/templates/admin/: login.html
code_trmnl.blog/: pyproject.toml
code_trmnl.blog/static/css/: terminal.css
code_trmnl.blog/static/js/: admin.js  terminal.js
code_trmnl.blog/templates/: base.html
code_trmnl.blog/templates/admin/: dashboard.html  profile.html
